fix: display color on mobile

--- a/_src-lp/blocks/counter-bf/counter-bf.scss
+++ b/_src-lp/blocks/counter-bf/counter-bf.scss
@@ -161,6 +161,10 @@
 }
 
 @media screen and (width < 767px) {
+  .counter-bf-container {
+    color: inherit;
+  }
+
   .counter-bf-container.hide-mobile {
     background-image: none!important;
   }
@@ -181,8 +185,12 @@
     align-items: flex-start;
     border: 0 none;
     background: transparent;
-    color: black;
+    color: inherit;
     text-align: left;
+  }
+
+  .counter-bf-container table#flipdownTable.red td strong {
+    color: inherit;
   }
 
   .counter-bf-container table#flipdownTable .flipdown {
